Better structure: Sorted different kinds of classes, removed most of static elements in Start.java